--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.eric.wishare"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -32,4 +32,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.6'
 
     //implementation 'com.google.firebase:firebase-iid:16.0.0'
-    implementation 'com.google.firebase:firebase-messaging:17.3.4'}
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+}
