--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </service>
 
         <activity android:name=".ContactActivity" />
-        <activity android:name=".NetworkActivity"></activity>
+        <activity android:name=".NetworkActivity" />
     </application>
 
 </manifest>
