--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -36,4 +36,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
 
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+
+
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 }
