back button navigation added

--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -31,8 +31,10 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".ContactActivity" />
-        <activity android:name=".NetworkActivity" />
+        <activity android:name=".ContactActivity"
+                  android:parentActivityName=".MainActivity"/>
+        <activity android:name=".NetworkActivity"
+                  android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
