--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
 
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+    compile 'com.android.support:cardview-v7:27.1.1'
 
 }
