--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
 
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
-    compile 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
 
 }
