--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -46,5 +46,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
+    implementation 'com.jjoe64:graphview:4.2.2'
+
+
 
 }
