--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
     implementation 'com.jjoe64:graphview:4.2.2'
+
+    implementation 'com.google.firebase:firebase-firestore:18.1.0'
 }
