--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'com.jjoe64:graphview:4.2.2'
 
     implementation 'com.google.firebase:firebase-firestore:18.1.0'
+    implementation 'com.android.volley:volley:1.1.1'
 }
